[package]
name = "ammonia-node"
version = "0.2.0"
authors = ["Peter Jaszkowiak <p.jaszkow@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "ammonia_node"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
ammonia = "2.0"
