[package]
name = "ammonia-node"
version = "0.2.0"
authors = ["Peter Jaszkowiak <p.jaszkow@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
edition = "2018"

[lib]
name = "ammonia_node"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.4.2"

[dependencies]
neon = "0.4.2"
ammonia = "3.1"
simple-interner = "0.2.0"
